// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrInput renders correctly 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="cdr-label-standalone cdr-label-standalone--spacing"
  >
    <label
      class="cdr-label-standalone__label"
      for="renders"
    >
      Label Test 
      <!--v-if-->
    </label>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="cdr-input-outer-wrap"
  >
    <div
      class="cdr-input-wrap"
    >
      <input
        autocapitalize="off"
        autocorrect="off"
        class="cdr-input cdr-input--primary cdr-input--medium"
        id="renders"
        spellcheck="false"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  
</div>
`;

exports[`CdrInput renders number input correctly 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="cdr-label-standalone cdr-label-standalone--spacing"
  >
    <label
      class="cdr-label-standalone__label"
      for="renders"
    >
      Label Test 
      <!--v-if-->
    </label>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="cdr-input-outer-wrap"
  >
    <div
      class="cdr-input-wrap"
    >
      <input
        autocapitalize="off"
        autocorrect="off"
        class="cdr-input cdr-input--primary cdr-input--medium"
        id="renders"
        inputmode="numeric"
        novalidate=""
        pattern="[0-9]*"
        spellcheck="false"
        type="number"
      />
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  
</div>
`;
